--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Official website for the British rock band Praying Mantis">
+    <meta name="keywords" content="praying mantis, rock band, nwobhm, rock music">
+
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Official website of Praying Mantis</title>
 </head>
 <body>
