Add core structure for home page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <title>Official website of Praying Mantis</title>
 </head>
 <body>
-    
+    <header>Header content</header>
+    <section>
+        Hero image
+    </section>
+    <section>
+        Tourdates
+    </section>
+    <footer>
+        Copyright & Social icons
+    </footer>
 </body>
 </html>
