--- a/index.html
+++ b/index.html
@@ -11,7 +11,27 @@
     <title>Official website of Praying Mantis</title>
 </head>
 <body>
-    <header>Header content</header>
+    <header>
+        <a href="index.html">
+            <img src="assets/images/logo.png" alt="band logo for praying mantis">
+        </a>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="band.html">Band</a>
+                </li>
+                <li>
+                    <a href="discography.html">Discography</a>
+                </li>
+                <li>
+                    <a href="contact.html">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
     <section>
         Hero image
     </section>
