--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <a href="index.html">
-            <img src="assets/images/logo.png" alt="band logo for praying mantis">
+            <img src="assets/images/logo.png" alt="band logo for praying mantis" id="logo">
         </a>
         <nav>
             <ul>
