--- a/index.html
+++ b/index.html
@@ -16,19 +16,20 @@
             <img src="assets/images/logo.png" alt="band logo for praying mantis" id="logo">
         </a>
         <nav>
-            <ul>
+            <ul id="menu">
                 <li>
-                    <a href="index.html">Home</a>
-                </li>
-                <li>
-                    <a href="band.html">Band</a>
+                    <a href="contact.html">Contact</a>
                 </li>
                 <li>
                     <a href="discography.html">Discography</a>
                 </li>
                 <li>
-                    <a href="contact.html">Contact</a>
+                    <a href="band.html">Band</a>
                 </li>
+                <li>
+                    <a href="index.html" class="active">Home</a>
+                </li>
+                                   
             </ul>
         </nav>
     </header>
