--- a/index.html
+++ b/index.html
@@ -34,7 +34,19 @@
         </nav>
     </header>
     <section>
-        Hero image
+        <div class="hero-slider">
+            <div class="slider-menu">
+                <label for="slide-dot-1"></label>
+                <label for="slide-dot-2"></label>
+                <label for="slide-dot-3"></label>
+            </div>
+            <input id="slide-dot-1" type="radio" name="slides" checked>
+            <div class="slide slide-1"></div>
+            <input id="slide-dot-2" type="radio" name="slides">
+            <div class="slide slide-2"></div>
+            <input id="slide-dot-3" type="radio" name="slides">
+            <div class="slide slide-3"></div>
+        </div>
     </section>
     <section>
         Tourdates
