Add tour dates section and styles

--- a/index.html
+++ b/index.html
@@ -49,10 +49,39 @@
         </div>
     </section>
     <section>
-        Tourdates
+        <h1 id="tourdates">Tour dates</h1>
+        <table>
+            <tr>
+                <td>01.09.2023</td>
+                <td>Hamburg, Germany</td>
+                <td>Indoor Summer Festival</td>
+                <td class="ticket-button"><input type="button" class="button" value="Buy Tickets"></input></td>
+            </tr>
+            <tr>
+                <td>23.11.2023</td>
+                <td>London, UK</td>
+                <td>The Cavern</td>
+                <td class="ticket-button"><input type="button" class="button" value="Buy Tickets"></input></td>
+            </tr>
+            <tr>
+                <td>24.11.2023</td>
+                <td>Cannock, UK</td>
+                <td>The Station</td>
+                <td class="ticket-button"><input type="button" class="button" value="Buy Tickets"></input></td>
+            </tr>
+            <tr>
+                <td>25.11.2023</td>
+                <td>Troon, UK</td>
+                <td>Winterstorm Festival</td>
+                <td class="ticket-button"><input type="button" class="button" value="Buy Tickets"></input></td>
+            </tr>
+        </table>
     </section>
     <footer>
         Copyright & Social icons
     </footer>
+
+    <!-- font awesome script-->
+    <script src="https://kit.fontawesome.com/5e217f2c0a.js" crossorigin="anonymous"></script>
 </body>
 </html>
