--- a/index.html
+++ b/index.html
@@ -78,7 +78,25 @@
         </table>
     </section>
     <footer>
-        Copyright & Social icons
+        <span>© 2023 - Praying Mantis</span>  
+        <ul>
+            <li>
+                <a href="https://www.facebook.com/PrayingMantisUKRockMetal" target="_blank" rel="noopener" 
+                aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-square-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/mantisofficial/" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-square-instagram"></i></a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/@prayingmantisrock298" target="_blank" rel="noopener"
+                    aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-square-youtube"></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com/troymantis" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-square-twitter"></i></a>
+            </li>
+        </ul>
     </footer>
 
     <!-- font awesome script-->
