Add style to footer

--- a/index.html
+++ b/index.html
@@ -78,7 +78,6 @@
         </table>
     </section>
     <footer>
-        <span>© 2023 - Praying Mantis</span>  
         <ul>
             <li>
                 <a href="https://www.facebook.com/PrayingMantisUKRockMetal" target="_blank" rel="noopener" 
@@ -97,6 +96,7 @@
                     aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-square-twitter"></i></a>
             </li>
         </ul>
+        <div>© 2023 - Praying Mantis</div>
     </footer>
 
     <!-- font awesome script-->
