Add basic structure to band page

--- a/band.html
+++ b/band.html
@@ -37,6 +37,15 @@
         </nav>
     </header>
 
+    <body>
+        <section id="band-members">
+            <h1 id="band">The band</h1>
+        </section>
+
+        <section>
+            Band history
+        </section>
+    </body>
     <footer>
         <ul>
             <li>
