--- a/band.html
+++ b/band.html
@@ -40,6 +40,27 @@
     <body>
         <section id="band-members">
             <h1 id="band">The band</h1>
+            <div class="member-photos">
+                <div class="image">
+                    <img src="assets/images/tino.png" alt="a portrait photo of tino">
+                    <div class="overlay">
+                        <div class="overlay-text">Tino Troy<br>
+                        Lead guitar/vocals</div>
+                    </div>
+                </div>
+                <div>
+                    <img src="assets/images/chris.png" alt="a portrait photo of chris">
+                </div>
+                <div>
+                    <img src="assets/images/andy.png" alt="a portrait photo of andy">
+                </div>
+                <div>
+                    <img src="assets/images/john.png" alt="a portrait photo of john">
+                </div>
+                <div>
+                    <img src="assets/images/hans.png" alt="a portrait photo of hans">
+                </div>
+            </div>
         </section>
 
         <section>
