--- a/contact.html
+++ b/contact.html
@@ -51,18 +51,20 @@
             </li>
             <li>
                 <a href="https://www.youtube.com/@prayingmantisrock298" target="_blank" rel="noopener"
-                    aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-square-youtube"></i></a>
+                    aria-label="Visit our Youtube page (opens in a new tab)"><i
+                        class="fa-brands fa-square-youtube"></i></a>
             </li>
             <li>
                 <a href="https://twitter.com/troymantis" target="_blank" rel="noopener"
-                    aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-square-twitter"></i></a>
+                    aria-label="Visit our Twitter page (opens in a new tab)"><i
+                        class="fa-brands fa-square-twitter"></i></a>
             </li>
         </ul>
         <div>© 2023 - Praying Mantis</div>
     </footer>
-    
+
     <!-- font awesome script-->
     <script src="https://kit.fontawesome.com/5e217f2c0a.js" crossorigin="anonymous"></script>
-    </body>
-    
-    </html>
+</body>
+
+</html>
