--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,6 +12,7 @@
     <title>Official website of Praying Mantis</title>
     <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
 </head>
+
 <body>
     <header>
         <a href="index.html">
@@ -30,7 +32,7 @@
                 <li>
                     <a href="index.html" class="active">Home</a>
                 </li>
-                                   
+
             </ul>
         </nav>
     </header>
@@ -81,20 +83,24 @@
     <footer>
         <ul>
             <li>
-                <a href="https://www.facebook.com/PrayingMantisUKRockMetal" target="_blank" rel="noopener" 
-                aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-square-facebook"></i></a>
+                <a href="https://www.facebook.com/PrayingMantisUKRockMetal" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)"><i
+                        class="fa-brands fa-square-facebook"></i></a>
             </li>
             <li>
                 <a href="https://www.instagram.com/mantisofficial/" target="_blank" rel="noopener"
-                    aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-square-instagram"></i></a>
+                    aria-label="Visit our Instagram page (opens in a new tab)"><i
+                        class="fa-brands fa-square-instagram"></i></a>
             </li>
             <li>
                 <a href="https://www.youtube.com/@prayingmantisrock298" target="_blank" rel="noopener"
-                    aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-square-youtube"></i></a>
+                    aria-label="Visit our Youtube page (opens in a new tab)"><i
+                        class="fa-brands fa-square-youtube"></i></a>
             </li>
             <li>
                 <a href="https://twitter.com/troymantis" target="_blank" rel="noopener"
-                    aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-square-twitter"></i></a>
+                    aria-label="Visit our Twitter page (opens in a new tab)"><i
+                        class="fa-brands fa-square-twitter"></i></a>
             </li>
         </ul>
         <div>© 2023 - Praying Mantis</div>
@@ -103,4 +109,5 @@
     <!-- font awesome script-->
     <script src="https://kit.fontawesome.com/5e217f2c0a.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
