Add basic structure of discography page

--- a/discography.html
+++ b/discography.html
@@ -37,6 +37,22 @@
         </nav>
     </header>
 
+    <section id="discography">
+        <h1>Albums</h1>
+        <div class="albums">
+            <div class="image">
+                <img src="assets/images/katharsis.png" alt="Album cover of the Katharsis album">
+                <div class="overlay">
+                    <div class="overlay-text">
+                        <h2>Katharsis</h2>
+                        <p>2022</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
     <footer>
         <ul>
             <li>
