Add content to discography page

--- a/band.html
+++ b/band.html
@@ -89,6 +89,10 @@
                         </div>
                     </div>
                 </div>
+                <i aria-hidden="true"></i>
+                <i aria-hidden="true"></i>
+                <i aria-hidden="true"></i>
+                <i aria-hidden="true"></i>
             </div>
         </section>
 
