--- a/discography.html
+++ b/discography.html
@@ -49,6 +49,136 @@
                     </div>
                 </div>
             </div>
+            <div class="image">
+                <img src="assets/images/keep-it-alive.png" alt="Album cover of the Keep It Alive album">
+                <div class="overlay">
+                    <div class="overlay-text">
+                        <h2>Keep It Alive!</h2>
+                        <p>2019</p>
+                    </div>
+                </div>
+            </div>
+            <div class="image">
+                <img src="assets/images/gravity.png" alt="Album cover of the Gravity album">
+                <div class="overlay">
+                    <div class="overlay-text">
+                        <h2>Gravity</h2>
+                        <p>2018</p>
+                    </div>
+                </div>
+            </div>
+            <div class="image">
+                <img src="assets/images/legacy.png" alt="Album cover of the Legacy album">
+                <div class="overlay">
+                    <div class="overlay-text">
+                        <h2>Legacy</h2>
+                        <p>2015</p>
+                    </div>
+                </div>
+            </div>
+            <div class="image">
+                <img src="assets/images/metalmorphosis.png" alt="Album cover of the Metalmorphosis album">
+                <div class="overlay">
+                    <div class="overlay-text">
+                        <h2>Metalmorphosis</h2>
+                        <p>2011</p>
+                    </div>
+                </div>
+            </div>
+            <div class="image">
+                <img src="assets/images/sanctuary.png" alt="Album cover of the Sanctuary album">
+                <div class="overlay">
+                    <div class="overlay-text">
+                        <h2>Sanctuary</h2>
+                        <p>2009</p>
+                    </div>
+                </div>
+            </div>
+            <div class="image">
+                <img src="assets/images/journey.png" alt="Album cover of the The Journey Goes On album">
+                <div class="overlay">
+                    <div class="overlay-text">
+                        <h2>The Journey Goes On</h2>
+                        <p>2003</p>
+                    </div>
+                </div>
+            </div>
+            <div class="image">
+                <img src="assets/images/nowhere.png" alt="Album cover of the Nowhere To Hide album">
+                <div class="overlay">
+                    <div class="overlay-text">
+                        <h2>Nowhere To Hide</h2>
+                        <p>2000</p>
+                    </div>
+                </div>
+            </div>
+            <div class="image">
+                <img src="assets/images/forever.png" alt="Album cover of the Forever In Time album">
+                <div class="overlay">
+                    <div class="overlay-text">
+                        <h2>Forever In Time</h2>
+                        <p>1998</p>
+                    </div>
+                </div>
+            </div>
+            <div class="image">
+                <img src="assets/images/captured.png" alt="Album cover of the Captured Alive In Tokyo City album">
+                <div class="overlay">
+                    <div class="overlay-text">
+                        <h2>Captured Alive In Tokyo City</h2>
+                        <p>1996</p>
+                    </div>
+                </div>
+            </div>
+            <div class="image">
+                <img src="assets/images/power-of-ten.png" alt="Album cover of the To The Power Of Ten album">
+                <div class="overlay">
+                    <div class="overlay-text">
+                        <h2>To The Power Of Ten</h2>
+                        <p>1995</p>
+                    </div>
+                </div>
+            </div>
+            <div class="image">
+                <img src="assets/images/new-world.png" alt="Album cover of the A Cry For The New World album">
+                <div class="overlay">
+                    <div class="overlay-text">
+                        <h2>A Cry For The New World</h2>
+                        <p>1993</p>
+                    </div>
+                </div>
+            </div>
+            <div class="image">
+                <img src="assets/images/predator.png" alt="Album cover of the Predator In Disguise album">
+                <div class="overlay">
+                    <div class="overlay-text">
+                        <h2>Predator In Disguise</h2>
+                        <p>1991</p>
+                    </div>
+                </div>
+            </div>
+            <div class="image">
+                <img src="assets/images/live-at-last.png" alt="Album cover of the Live At Last album">
+                <div class="overlay">
+                    <div class="overlay-text">
+                        <h2>Live At Last</h2>
+                        <p>1990</p>
+                    </div>
+                </div>
+            </div>
+            <div class="image">
+                <img src="assets/images/time-tells.png" alt="Album cover of the Time Tells No Lies album">
+                <div class="overlay">
+                    <div class="overlay-text">
+                        <h2>Time Tells No Lies</h2>
+                        <p>1981</p>
+                    </div>
+                </div>
+            </div>
+            <i aria-hidden="true"></i>
+            <i aria-hidden="true"></i>
+            <i aria-hidden="true"></i>
+            <i aria-hidden="true"></i>
         </div>
     </section>
 
