Add content to contact page

--- a/contact.html
+++ b/contact.html
@@ -37,6 +37,43 @@
         </nav>
     </header>
 
+    <section id="contact">
+        <div class="contact-container">
+            <div>
+                <h3>Management</h3>
+                <p>Monstrous Child - Paul Newcomb<br>
+                Website: <a href="http://www.monstrouschild.com/" target="_blank">www.monstrouschild.com</a><br>
+                Email: <a href="mailto:paul@monstrouschild.com">Paul Newcomb</a><br>
+                Phone: +44 (0)208 680 4395<br>
+                Mobile: +44 (0)7768 510982
+                </p>
+            </div>
+            <div>
+                <h3>Record Label</h3>
+                <p>Frontiers Records<br>
+                    Website: <a href="http://www.frontiers.it" target="_blank">www.frontiers.it</a><br>
+                    Facebook: <a href="https://www.facebook.com/frontiersmusicsrl" target="_blank">Frontiers REcords on Facebook</a>
+                </p>
+            </div>
+            <div>
+                <h3>Booking Agent</h3>
+                <p>Eternal Rock - Ludy Wetzl<br>
+                    Website: <a href="http://www.eternalrock-musicagency.com//" target="_blank">www.eternalrock-musicagency.com/</a><br>
+                    Email: <a href="mailto:ludy@eternalrock-musicagency.com">Ludy Wetzl</a><br>
+                    Phone: +31 (0)433 44 08 41
+                </p>
+            </div>
+            <div>
+                <h3>Media & Merchandise</h3>
+                <p>Catalyst QA Ltd. - Elaine Jackson<br>
+                Email: <a href="mailto:elaine@catalystqa.net">Elaine Jackson</a><br>
+                 
+                </p>
+            </div>
+        </div>
+
+    </section>
+
     <footer>
         <div id="footer">
             <span id="copyright">© 2023 - Praying Mantis</span>
