Add responsiveness to hero image slider

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     </header>
     <section>
         <div class="hero-slider">
+            <img src="/assets/images/hero-background.png">
             <div class="slider-menu">
                 <label for="slide-dot-1"></label>
                 <label for="slide-dot-2"></label>
