--- a/discography.html
+++ b/discography.html
@@ -22,13 +22,13 @@
     
             <ul id="menu">
                 <li>
-                    <a href="index.html" class="active">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
                     <a href="band.html">Band</a>
                 </li>
                 <li>
-                    <a href="discography.html">Discography</a>
+                    <a href="discography.html" class="active">Discography</a>
                 </li>
                 <li>
                     <a href="contact.html">Contact</a>
@@ -46,13 +46,13 @@
             <nav id="sidebar-menu">
                 <ul>
                     <li>
-                        <a href="index.html" class="active">Home</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
                         <a href="band.html">Band</a>
                     </li>
                     <li>
-                        <a href="discography.html">Discography</a>
+                        <a href="discography.html" class="active">Discography</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
