--- a/index.html
+++ b/index.html
@@ -88,25 +88,25 @@
                 <td>01.09.2023</td>
                 <td>Hamburg, Germany</td>
                 <td>Indoor Summer Festival</td>
-                <td class="ticket-button"><input type="button" class="button" value="Buy Tickets"></input></td>
+                <td class="ticket-button"><input type="button" class="button" value="Buy Tickets"></td>
             </tr>
             <tr>
                 <td>23.11.2023</td>
                 <td>London, UK</td>
                 <td>The Cavern</td>
-                <td class="ticket-button"><input type="button" class="button" value="Buy Tickets"></input></td>
+                <td class="ticket-button"><input type="button" class="button" value="Buy Tickets"></td>
             </tr>
             <tr>
                 <td>24.11.2023</td>
                 <td>Cannock, UK</td>
                 <td>The Station</td>
-                <td class="ticket-button"><input type="button" class="button" value="Buy Tickets"></input></td>
+                <td class="ticket-button"><input type="button" class="button" value="Buy Tickets"></td>
             </tr>
             <tr>
                 <td>25.11.2023</td>
                 <td>Troon, UK</td>
                 <td>Winterstorm Festival</td>
-                <td class="ticket-button"><input type="button" class="button" value="Buy Tickets"></input></td>
+                <td class="ticket-button"><input type="button" class="button" value="Buy Tickets"></td>
             </tr>
         </table>
     </section>
