--- a/band.html
+++ b/band.html
@@ -16,9 +16,9 @@
 <body>
     <header>
         <nav>
-            <ul class='nav-bar'>
-                <li class='logo'><a href='#'><img src='./assets/images/logo.png' /></a></li>
-                <input type='checkbox' id='check' />
+            <ul class="nav-bar">
+                <li class="logo"><a href="index.html"><img src="./assets/images/logo.png" alt="Logo of the Band Praying Mantis"></a></li>
+                <input type="checkbox" id="check">
                 <span class="menu">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="band.html" class="active">Band</a></li>
@@ -31,8 +31,7 @@
         </nav>
     </header>
 
-    <body>
-        <section id="band-members">
+    <section id="band-members">
             <h1 id="band">The band</h1>
             <div class="member-photos">
                 <div class="image">
@@ -90,12 +89,9 @@
             </div>
         </section>
 
-
         <section id="band-history">
             <div class="band-container">
-
                 <div class="band-text band-text-1">
-
                     <h2 class="band-history">About Praying Mantis</h2>
                     With their latest critically acclaimed album 'Katharsis' released via Frontier Records in January
                     2022, Praying Mantis
@@ -115,14 +111,12 @@
                     Hard Rock fans
                     worldwide. Due to Neal's much-appreciated support, Mantis were given a platform to air their music,
                     which featured the
-                    classics 'Captured City' and 'Lovers to the Grave'. <br>
-                    <br>
+                    classics 'Captured City' and 'Lovers to the Grave'. <br><br>
                     Along with fellow London bands Iron Maiden, Angel Witch and Samson, Praying Mantis quickly
                     established themselves and
                     rapidly received the attention of the music press of the time. Along with some similar bands across
                     the UK, this entire
                     movement was labelled by 'Sounds' as the New Wave of British Heavy Metal. <br> <br>
-
                 </div>
                 <div class="band-image band-image-1">
                     <img src="/assets/images/band-frontiers.png" alt="A photo of the band" class="band-image1">
@@ -168,8 +162,6 @@
 
             <div class="band-container">
                 <div class="band-text band-text-3">
-
-
                     <h3>The New Millenium</h3>
                     <p>In 2007, guitarist Andy Burgess replaced Dennis Stratton in the line-up, continuing the dual lead
                         for the famous Mantis
@@ -205,32 +197,26 @@
                 </div>
             </div>
         </section>
-    </body>
+
     <footer>
         <div id="footer">
             <span id="copyright">© 2023 - Praying Mantis</span>
             <span id="social-icons">
-
                 <a href="https://www.facebook.com/PrayingMantisUKRockMetal" target="_blank" rel="noopener"
                     aria-label="Visit our Facebook page (opens in a new tab)"><i
                         class="fa-brands fa-square-facebook"></i></a>
-
                 <a href="https://www.instagram.com/mantisofficial/" target="_blank" rel="noopener"
                     aria-label="Visit our Instagram page (opens in a new tab)"><i
                         class="fa-brands fa-square-instagram"></i></a>
-
                 <a href="https://www.youtube.com/@prayingmantisrock298" target="_blank" rel="noopener"
                     aria-label="Visit our Youtube page (opens in a new tab)"><i
                         class="fa-brands fa-square-youtube"></i></a>
-
                 <a href="https://twitter.com/troymantis" target="_blank" rel="noopener"
                     aria-label="Visit our Twitter page (opens in a new tab)"><i
                         class="fa-brands fa-square-twitter"></i></a>
-
             </span>
         </div>
     </footer>
-
 
     <!-- font awesome script-->
     <script src="https://kit.fontawesome.com/5e217f2c0a.js" crossorigin="anonymous"></script>
