--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <body>
     <header>
          <nav>
-            <ul class='nav-bar'>
-                 <li class='logo'><a href='#'><img src='./assets/images/logo.png' /></a></li>
-                <input type='checkbox' id='check' />
+            <ul class="nav-bar">
+                <li class="logo"><a href="index.html"><img src="./assets/images/logo.png" alt="Logo of the Band Praying Mantis"></a></li>
+                <input type="checkbox" id="check">
                 <span class="menu">
                     <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="band.html">Band</a></li>
@@ -33,7 +33,7 @@
 
     <section>
         <div class="hero-slider">
-            <img src="/assets/images/hero-background.png">
+            <img src="/assets/images/hero-background.png" alt="Invisible background">
             <div class="slider-menu">
                 <label for="slide-dot-1"></label>
                 <label for="slide-dot-2"></label>
@@ -54,25 +54,29 @@
                 <td>01.09.2023</td>
                 <td>Hamburg, Germany</td>
                 <td>Indoor Summer Festival</td>
-                <td class="ticket-button"><input type="button" class="button" value="Buy Tickets"></td>
+                <td class="ticket-button"><a href="https://www.ticketmaster.co.uk/" class="button" target="_blank" rel="noopener"
+                    aria-label="Visit Ticketmaster to buy tickets (opens in a new tab)">Buy Tickets </a></td>
             </tr>
             <tr>
                 <td>23.11.2023</td>
                 <td>London, UK</td>
                 <td>The Cavern</td>
-                <td class="ticket-button"><input type="button" class="button" value="Buy Tickets"></td>
+                <td class="ticket-button"><a href="https://www.ticketmaster.co.uk/" class="button" target="_blank" rel="noopener"
+                    aria-label="Visit Ticketmaster to buy tickets (opens in a new tab)">Buy Tickets </a></td>
             </tr>
             <tr>
                 <td>24.11.2023</td>
                 <td>Cannock, UK</td>
                 <td>The Station</td>
-                <td class="ticket-button"><input type="button" class="button" value="Buy Tickets"></td>
+                <td class="ticket-button"><a href="https://www.ticketmaster.co.uk/" class="button" target="_blank" rel="noopener"
+                    aria-label="Visit Ticketmaster to buy tickets (opens in a new tab)">Buy Tickets </a></td>
             </tr>
             <tr>
                 <td>25.11.2023</td>
                 <td>Troon, UK</td>
                 <td>Winterstorm Festival</td>
-                <td class="ticket-button"><input type="button" class="button" value="Buy Tickets"></td>
+                <td class="ticket-button"><a href="https://www.ticketmaster.co.uk/" class="button" target="_blank" rel="noopener"
+                    aria-label="Visit Ticketmaster to buy tickets (opens in a new tab)">Buy Tickets </a></td>
             </tr>
         </table>
     </section>
@@ -81,24 +85,18 @@
         <div id="footer">
             <span id="copyright">© 2023 - Praying Mantis</span>
             <span id="social-icons">
-
                 <a href="https://www.facebook.com/PrayingMantisUKRockMetal" target="_blank" rel="noopener"
                     aria-label="Visit our Facebook page (opens in a new tab)"><i
                         class="fa-brands fa-square-facebook"></i></a>
-
                 <a href="https://www.instagram.com/mantisofficial/" target="_blank" rel="noopener"
                     aria-label="Visit our Instagram page (opens in a new tab)"><i
                         class="fa-brands fa-square-instagram"></i></a>
-
                 <a href="https://www.youtube.com/@prayingmantisrock298" target="_blank" rel="noopener"
                     aria-label="Visit our Youtube page (opens in a new tab)"><i
                         class="fa-brands fa-square-youtube"></i></a>
-
                 <a href="https://twitter.com/troymantis" target="_blank" rel="noopener"
                     aria-label="Visit our Twitter page (opens in a new tab)"><i
                         class="fa-brands fa-square-twitter"></i></a>
-                        
-
             </span>
         </div>
     </footer>
