--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 <header>
     <nav>
         <ul class="nav-bar">
-            <li class="logo"><a href="index.html"><img src=""./assets/images/logo.png" alt="Logo of the Band Praying Mantis"></a></li>
+            <li class="logo"><a href="index.html"><img src="./assets/images/logo.png" alt="Logo of the Band Praying Mantis"></a></li>
             <input type="checkbox" id="check">
             <span class="menu">
                 <li><a href="index.html">Home</a></li>
