Adjust margins between different sections

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                     <label for="check" class="close-menu" id="close-icon"><i class="fas fa-times"></i></label>
                 </span>
                 <label for="check" class="open-menu" id="hamburger-icon"><i class="fas fa-bars"></i></label>
-            </ul>
+            </ul> 
         </nav>
     </header>
 
-    <section>
+    <div>
         <div class="hero-slider">
             <img src="/assets/images/hero-background.png" alt="Invisible background">
             <div class="slider-menu">
@@ -46,7 +46,7 @@
             <input id="slide-dot-3" type="radio" name="slides">
             <div class="slide slide-3"></div>
         </div>
-    </section>
+    </div>
     <section>
         <h1 id="tourdates">Tour dates</h1>
         <table>
