Fix validation error in hamburger menu

--- a/band.html
+++ b/band.html
@@ -16,18 +16,18 @@
 <body>
     <header>
         <nav>
-            <ul class="nav-bar">
-                <li class="logo"><a href="index.html"><img src="./assets/images/logo.png" alt="Logo of the Band Praying Mantis"></a></li>
+            <div class="nav-bar">
+                <a href="index.html" class="logo"><img src="./assets/images/logo.png" alt="Logo of the Band Praying Mantis"></a>
                 <input type="checkbox" id="check">
                 <span class="menu">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="band.html" class="active">Band</a></li>
-                    <li><a href="discography.html">Discography</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <a href="index.html">Home</a>
+                    <a href="band.html" class="active">Band</a>
+                    <a href="discography.html">Discography</a>
+                    <a href="contact.html">Contact</a>
                     <label for="check" class="close-menu" id="close-icon"><i class="fas fa-times"></i></label>
                 </span>
                 <label for="check" class="open-menu" id="hamburger-icon"><i class="fas fa-bars"></i></label>
-            </ul>
+            </div>
         </nav>
     </header>
 
