Change alt attribute on image

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <div>
         <div class="hero-slider">
-            <img src="/assets/images/hero-background.png" alt="Invisible background">
+            <img src="/assets/images/hero-background.png" alt=" ">
             <div class="slider-menu">
                 <label for="slide-dot-1"></label>
                 <label for="slide-dot-2"></label>
