Add comments with links to tutorials used

--- a/band.html
+++ b/band.html
@@ -15,6 +15,7 @@
 
 <body>
     <header>
+        <!-- Tutorial for CSS only Hamburger menu: https://www.youtube.com/watch?v=QQlxvj_GKss -->
         <nav>
             <div class="nav-bar">
                 <a href="index.html" class="logo"><img src="./assets/images/logo.png" alt="Logo of the Band Praying Mantis"></a>
