--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <body>
     <header>
+        <!-- Tutorial for CSS only Hamburger menu: https://www.youtube.com/watch?v=QQlxvj_GKss -->
          <nav>
             <div class="nav-bar">
                 <a href="index.html" class="logo"><img src="./assets/images/logo.png" alt="Logo of the Band Praying Mantis"></a>
@@ -32,6 +33,7 @@
     </header>
 
     <div>
+        <!-- Tutorial for hero slider using CSS only: https://www.w3docs.com/snippets/css/how-to-create-an-image-slider-or-slideshow.html#slide-1 -->
         <div class="hero-slider">
             <img src="/assets/images/hero-background.png" alt=" ">
             <div class="slider-menu">
