Change image file paths

--- a/band.html
+++ b/band.html
@@ -120,13 +120,13 @@
                     movement was labelled by 'Sounds' as the New Wave of British Heavy Metal. <br> <br>
                 </div>
                 <div class="band-image band-image-1">
-                    <img src="/assets/images/band-frontiers.png" alt="A photo of the band" class="band-image1">
+                    <img src="assets/images/band-frontiers.png" alt="A photo of the band" class="band-image1">
                 </div>
             </div>
 
             <div class="band-container">
                 <div class="band-image band-image-2">
-                    <img src="/assets/images/band-live.png" alt="A photo of the band playing live">
+                    <img src="assets/images/band-live.png" alt="A photo of the band playing live">
                 </div>
                 <div class="band-text band-text-2">
                     <p>
@@ -157,7 +157,7 @@
                     </p>
                 </div>
                 <div class="band-image band-image-2a">
-                    <img src="/assets/images/band-live.png" alt="A photo of the band playing live">
+                    <img src="assets/images/band-live.png" alt="A photo of the band playing live">
                 </div>
             </div>
 
@@ -194,7 +194,7 @@
                     </p>
                 </div>
                 <div class="band-image band-image-3">
-                    <img src="/assets/images/band-katharsis.png" alt="A photo of the band" class="band-image1">
+                    <img src="assets/images/band-katharsis.png" alt="A photo of the band" class="band-image1">
                 </div>
             </div>
         </section>
