Change favicon file path

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Official website of Praying Mantis</title>
-    <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
         <!-- Tutorial for CSS only Hamburger menu: https://www.youtube.com/watch?v=QQlxvj_GKss -->
          <nav>
             <div class="nav-bar">
-                <a href="index.html" class="logo"><img src="./assets/images/logo.png" alt="Logo of the Band Praying Mantis"></a>
+                <a href="index.html" class="logo"><img src="assets/images/logo.png" alt="Logo of the Band Praying Mantis"></a>
                 <input type="checkbox" id="check">
                 <span class="menu">
                     <a href="index.html" class="active">Home</a>
