Fix validation error on contact page

--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
                     <label for="subject">Subject</label><br>
                     <input type="text" id="subject" name="subject" placeholder="Please provide a subject"><br>
                     <label for="message">Message</label><br>
-                    <textarea name="message" required placeholder="Enter your text here."></textarea><br>
+                    <textarea id="message" name="message" required placeholder="Enter your text here."></textarea><br>
                     <input type="submit" id="send-button" value="Send message">
                 </form>
             </div>
