--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
                 <label for="slide-dot-3"></label>
             </div>
             <input id="slide-dot-1" type="radio" name="slides" checked>
-            <div class="slide slide-1"></div>
+            <div class="slide slide-1" title="image-slider with band pictures"></div>
             <input id="slide-dot-2" type="radio" name="slides">
-            <div class="slide slide-2"></div>
+            <div class="slide slide-2" title="image-slider with band pictures"></div>
             <input id="slide-dot-3" type="radio" name="slides">
-            <div class="slide slide-3"></div>
+            <div class="slide slide-3" title="image-slider with band pictures"></div>
         </div>
     </div>
     <section>
