Add band member names and album names for smaller devices

--- a/discography.html
+++ b/discography.html
@@ -36,7 +36,13 @@
         <h1>Albums</h1>
         <div class="albums">
             <div class="image">
+                <figure>
                 <img src="assets/images/katharsis.png" alt="Album cover of the Katharsis album">
+                <figcaption>
+                    <h2>Katharsis</h2>
+                    <p>2022</p>
+                </figcaption>
+                </figure>
                 <div class="overlay">
                     <div class="overlay-text">
                         <h2>Katharsis</h2>
@@ -45,7 +51,13 @@
                 </div>
             </div>
             <div class="image">
+                <figure>
                 <img src="assets/images/keep-it-alive.png" alt="Album cover of the Keep It Alive album">
+                <figcaption>
+                    <h2>Keep It Alive!</h2>
+                    <p>2019</p>
+                </figcaption>
+                </figure>
                 <div class="overlay">
                     <div class="overlay-text">
                         <h2>Keep It Alive!</h2>
@@ -54,7 +66,13 @@
                 </div>
             </div>
             <div class="image">
+                <figure>
                 <img src="assets/images/gravity.png" alt="Album cover of the Gravity album">
+                <figcaption>
+                    <h2>Gravity</h2>
+                    <p>2018</p>
+                </figcaption>
+                </figure>
                 <div class="overlay">
                     <div class="overlay-text">
                         <h2>Gravity</h2>
@@ -63,7 +81,13 @@
                 </div>
             </div>
             <div class="image">
+                <figure>
                 <img src="assets/images/legacy.png" alt="Album cover of the Legacy album">
+                <figcaption>
+                    <h2>Legacy</h2>
+                    <p>2015</p>
+                </figcaption>
+                </figure>
                 <div class="overlay">
                     <div class="overlay-text">
                         <h2>Legacy</h2>
@@ -72,7 +96,13 @@
                 </div>
             </div>
             <div class="image">
+                <figure>
                 <img src="assets/images/metalmorphosis.png" alt="Album cover of the Metalmorphosis album">
+                <figcaption>
+                    <h2>Metalmorphosis</h2>
+                    <p>2011</p>
+                </figcaption>
+                </figure>
                 <div class="overlay">
                     <div class="overlay-text">
                         <h2>Metalmorphosis</h2>
@@ -81,7 +111,13 @@
                 </div>
             </div>
             <div class="image">
+                <figure>
                 <img src="assets/images/sanctuary.png" alt="Album cover of the Sanctuary album">
+                <figcaption>
+                    <h2>Sanctuary</h2>
+                    <p>2009</p>
+                </figcaption>
+                </figure>
                 <div class="overlay">
                     <div class="overlay-text">
                         <h2>Sanctuary</h2>
@@ -90,7 +126,13 @@
                 </div>
             </div>
             <div class="image">
+                <figure>
                 <img src="assets/images/journey.png" alt="Album cover of the The Journey Goes On album">
+                <figcaption>
+                    <h2>The Journey Goes On</h2>
+                    <p>2003</p>
+                </figcaption>
+                </figure>
                 <div class="overlay">
                     <div class="overlay-text">
                         <h2>The Journey Goes On</h2>
@@ -99,7 +141,13 @@
                 </div>
             </div>
             <div class="image">
+                <figure>
                 <img src="assets/images/nowhere.png" alt="Album cover of the Nowhere To Hide album">
+                <figcaption>
+                    <h2>Nowhere To Hide</h2>
+                    <p>2000</p>
+                </figcaption>
+                </figure>
                 <div class="overlay">
                     <div class="overlay-text">
                         <h2>Nowhere To Hide</h2>
@@ -108,7 +156,13 @@
                 </div>
             </div>
             <div class="image">
+                <figure>
                 <img src="assets/images/forever.png" alt="Album cover of the Forever In Time album">
+                <figcaption>
+                    <h2>Forever In Time</h2>
+                    <p>1998</p>
+                </figcaption>
+                </figure>
                 <div class="overlay">
                     <div class="overlay-text">
                         <h2>Forever In Time</h2>
@@ -117,7 +171,13 @@
                 </div>
             </div>
             <div class="image">
+                <figure>
                 <img src="assets/images/captured.png" alt="Album cover of the Captured Alive In Tokyo City album">
+                <figcaption>
+                    <h2>Captured Alive In Tokyo City</h2>
+                    <p>1996</p>
+                </figcaption>
+                </figure>
                 <div class="overlay">
                     <div class="overlay-text">
                         <h2>Captured Alive In Tokyo City</h2>
@@ -126,7 +186,13 @@
                 </div>
             </div>
             <div class="image">
+                <figure>
                 <img src="assets/images/power-of-ten.png" alt="Album cover of the To The Power Of Ten album">
+                <figcaption>
+                    <h2>The Power Of Ten</h2>
+                    <p>1995</p>
+                </figcaption>
+                </figure>
                 <div class="overlay">
                     <div class="overlay-text">
                         <h2>To The Power Of Ten</h2>
@@ -135,7 +201,13 @@
                 </div>
             </div>
             <div class="image">
+                <figure>
                 <img src="assets/images/new-world.png" alt="Album cover of the A Cry For The New World album">
+                <figcaption>
+                    <h2>A Cry For The New World</h2>
+                    <p>1993</p>
+                </figcaption>
+                </figure>
                 <div class="overlay">
                     <div class="overlay-text">
                         <h2>A Cry For The New World</h2>
@@ -144,7 +216,13 @@
                 </div>
             </div>
             <div class="image">
+                <figure>
                 <img src="assets/images/predator.png" alt="Album cover of the Predator In Disguise album">
+                <figcaption>
+                    <h2>Predator In Disguise</h2>
+                    <p>1991</p>
+                </figcaption>
+                </figure>
                 <div class="overlay">
                     <div class="overlay-text">
                         <h2>Predator In Disguise</h2>
@@ -153,7 +231,13 @@
                 </div>
             </div>
             <div class="image">
+                <figure>
                 <img src="assets/images/live-at-last.png" alt="Album cover of the Live At Last album">
+                <figcaption>
+                    <h2>Live At Last</h2>
+                    <p>1990</p>
+                </figcaption>
+                </figure>
                 <div class="overlay">
                     <div class="overlay-text">
                         <h2>Live At Last</h2>
@@ -162,7 +246,13 @@
                 </div>
             </div>
             <div class="image">
+                <figure>
                 <img src="assets/images/time-tells.png" alt="Album cover of the Time Tells No Lies album">
+                <figcaption>
+                    <h2>Time Tells No Lies</h2>
+                    <p>1981</p>
+                </figcaption>
+                </figure>
                 <div class="overlay">
                     <div class="overlay-text">
                         <h2>Time Tells No Lies</h2>
