--- a/band.html
+++ b/band.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Official website of Praying Mantis</title>
-    <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href=assets/images/favicon.ico">
 </head>
 
 <body>
@@ -36,7 +36,13 @@
             <h1 id="band">The band</h1>
             <div class="member-photos">
                 <div class="image">
+                    <figure>
                     <img src="assets/images/tino.png" alt="a portrait photo of tino">
+                    <figcaption>
+                        <h2>Tino Troy</h2>
+                        <p>Lead guitar/vocals</p>
+                    </figcaption>
+                    </figure>
                     <div class="overlay">
                         <div class="overlay-text">
                             <h2>Tino Troy</h2>
@@ -46,7 +52,13 @@
                 </div>
 
                 <div class="image">
+                    <figure>
                     <img src="assets/images/chris.png" alt="a portrait photo of chris">
+                    <figcaption>
+                        <h2>Chris Troy</h2>
+                        <p>Bass guitar/vocals</p>
+                    </figcaption>
+                    </figure>
                     <div class="overlay">
                         <div class="overlay-text">
                             <h2>Chris Troy</h2>
@@ -56,7 +68,13 @@
                 </div>
 
                 <div class="image">
+                    <figure>
                     <img src="assets/images/andy.png" alt="a portrait photo of andy">
+                    <figcaption>
+                        <h2>Andy Burgess</h2>
+                        <p>Lead guitar/vocals</p>
+                    </figcaption>
+                    </figure>
                     <div class="overlay">
                         <div class="overlay-text">
                             <h2>Andy Burgess</h2>
@@ -65,7 +83,13 @@
                     </div>
                 </div>
                 <div class="image">
+                    <figure>
                     <img src="assets/images/john.png" alt="a portrait photo of john">
+                    <figcaption>
+                        <h2>John Jaycee Cuijpers</h2>
+                        <p>Vocals</p>
+                    </figcaption>
+                    </figure>
                     <div class="overlay">
                         <div class="overlay-text">
                             <h2>John Jaycee Cuijpers</h2>
@@ -75,7 +99,13 @@
 
                 </div>
                 <div class="image">
+                    <figure>
                     <img src="assets/images/hans.png" alt="a portrait photo of hans">
+                    <figcaption>
+                        <h2>Hans In T Zandt</h2>
+                        <p>Drums/percussion/vocals</p>
+                    </figcaption>
+                    </figure>
                     <div class="overlay">
                         <div class="overlay-text">
                             <h2>Hans In T Zandt</h2>
