Fix favicon on band page

--- a/band.html
+++ b/band.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Official website of Praying Mantis</title>
-    <link rel="icon" type="image/x-icon" href=assets/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
 </head>
 
 <body>
