Add missing aria-labels for links on contact page

--- a/contact.html
+++ b/contact.html
@@ -37,8 +37,9 @@
             <div id="management">
                 <h3>Management</h3>
                 <p>Monstrous Child - Paul Newcomb<br>
-                Website: <a href="http://www.monstrouschild.com/" target="_blank" rel="noopener">www.monstrouschild.com</a><br>
-                Email: <a href="mailto:paul@monstrouschild.com">Paul Newcomb</a><br>
+                Website: <a href="http://www.monstrouschild.com/" target="_blank" rel="noopener"
+                aria-label="Visit Monstrouschild.com (opens in a new tab)">www.monstrouschild.com</a><br>
+                Email: <a href="mailto:paul@monstrouschild.com" aria-label="Write an email (opens in your eimal programm)">Paul Newcomb</a><br>
                 Phone: +44 (0)208 680 4395<br>
                 Mobile: +44 (0)7768 510982
                 </p>
@@ -46,23 +47,25 @@
             <div id="record-label">
                 <h3>Record Label</h3>
                 <p>Frontiers Records<br>
-                    Website: <a href="http://www.frontiers.it" target="_blank" rel="noopener">www.frontiers.it</a><br>
-                    Facebook: <a href="https://www.facebook.com/frontiersmusicsrl" target="_blank">Frontiers Records on Facebook</a>
+                    Website: <a href="http://www.frontiers.it" target="_blank" rel="noopener"
+                    aria-label="Visit Frontiers Records website (opens in a new tab)">www.frontiers.it</a><br>
+                    Facebook: <a href="https://www.facebook.com/frontiersmusicsrl" target="_blank" aria-label="Visit Frontiers Records facebook page (opens in a new tab)">Frontiers Records on Facebook</a>
                 </p>
             </div>
             
             <div id="booking">
                 <h3>Booking Agent</h3>
                 <p>Eternal Rock - Ludy Wetzl<br>
-                    Website: <a href="http://www.eternalrock-musicagency.com//" target="_blank" rel="noopener">www.eternalrock-musicagency.com/</a><br>
-                    Email: <a href="mailto:ludy@eternalrock-musicagency.com">Ludy Wetzl</a><br>
+                    Website: <a href="http://www.eternalrock-musicagency.com//" target="_blank" rel="noopener"
+                    aria-label="Visit Eternal Rock Music Agency's website (opens in a new tab)">www.eternalrock-musicagency.com/</a><br>
+                    Email: <a href="mailto:ludy@eternalrock-musicagency.com" aria-label="Write an email (opens in your eimal programm)">Ludy Wetzl</a><br>
                     Phone: +31 (0)433 44 08 41
                 </p>
             </div>
             <div id="merchandise">
                 <h3>Media & Merchandise</h3>
                 <p>Catalyst QA Ltd. - Elaine Jackson<br>
-                Email: <a href="mailto:elaine@catalystqa.net">Elaine Jackson</a><br>
+                Email: <a href="mailto:elaine@catalystqa.net" aria-label="Write an email (opens in your eimal programm)">Elaine Jackson</a><br>
                  
                 </p>
             </div>
